--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "mongoose": "^8.1.1"
   },
   "devDependencies": {
