--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=5000
 MONGO_URI=mongodb+srv://trent123:Leafgreen1%21@cluster0.yvg9mhy.mongodb.net/proshop?retryWrites=true&w=majority
+JWT_SECRET=ADD_YOUR_SECRET
