--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+sonar-scanner.properties
+.scannerwork/report-task.txt
+.scannerwork/.sonar_lock
