--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.3.2",
+    "multer": "^1.4.5-lts.1",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.0.3"
   }
 }
