Update example.env. for contact us feature to work.

--- a/example.env
+++ b/example.env
@@ -7,3 +7,8 @@ PAGINATION_LIMIT=8
 retryWrites=true&w=majority
 PAYPAL_APP_SECRET=EFU7_zIdeWnLRGy_9MqrtzF_CKOPLQRxT7v-RLmdl9wN7je2xIjGQIO0v9FozUvsa6sD6bk2RJvjT6Lp
 PAYPAL_API_URL=https://api-m.sandbox.paypal.com
+ELASTIC_EMAIL_HOST=smtp.elasticemail.com
+ELATIC_EMAIL_USER=nicko20971@gmail.com
+ELASTIC_EMAIL_PASS=1A8F356F336CD7584A486F3192F35AC49595
+FROM_EMAIL=nicko20971@gmail.com
+TO_EMAIL=njasper0126@gmail.com
